src/App.css
/* ... */
.vvd:hover::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
}

nav.navbar .navbar-toggler:active,
nav.navbar .navbar-toggler:focus {
  outline: none;
  box-shadow: none;
}

nav.navbar .navbar-toggler-icon {
  width: 24px;
  height: 17px;
  background-image: none;
  position: relative;
  border-bottom: 2px solid #fff;
  transition: all 300ms linear;
  top: -2px;
}

nav.navbar .navbar-toggler-icon:focus {
  border-bottom: 2px solid #000;
}

nav.navbar .navbar-toggler-icon:after,
nav.navbar .navbar-toggler-icon:before {
  width: 24px;
  position: absolute;
  height: 2px;
  background-color: #000;
  top: 0;
  left: 0;
  content: '';
  z-index: 2;
  transition: all 300ms linear;
}

nav.navbar .navbar-toggler-icon:after {
  top: 8px;
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
  transform: rotate(45deg);
  background-color: #000;
  height: 2px;
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
  transform: translateY(8px) rotate(-45deg);
  background-color: #000;
  height: 2px;
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
  border-color: transparent;
}

/************ Banner Css ************/
.banner {
  margin-top: 0;
  padding: 350px 0 200px 0;
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
}

.banner video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 20%;
  object-fit: cover;
  z-index: -1;
}

.banner .tagline {
  font-weight: 700;
  letter-spacing: 0.8px;
  padding: 8px 10px;
  border: 1px solid rgba(255, 255, 255, 0.5);
  font-size: 20px;
  margin-bottom: 16px;
  display: inline-block;
}

.banner h1 {
  font-size: 65px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 1;
  margin-bottom: 30px;
  display: block;
}

.banner p {
  color: #fff;
  padding: 5px;
  background-color: #000;
  opacity: .55;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  width: 96%;
}

.banner button {
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  margin-top: 50px;
  margin-bottom: 50px;
  letter-spacing: 0.8px;
  display: flex;
  align-items: center;
}

.banner button svg {
  font-size: 25px;
  margin-left: 10px;
  transition: 0.3s ease-in-out;
  line-height: 1;
}

.banner button:hover svg {
  margin-left: 25px;
}


/************ Products Css ************/
.products {
  padding: 0 0 50px 0;
  position: relative;
  background: linear-gradient(#5CB0F0, #5CB0F0 150%) !important;
  text-align: center;
  padding: 80px 50px;
}

.products .springTitle {
  width: 70%;
  height: 70%;
}


.products-bx {
  background: #151515;
  text-align: center;
  padding: 80px 50px;
}

.products h1 {
  font-size: 150px;
  font-weight: 700;
  margin-top: 30px;
}

.products h2 {
  font-size: 60px;
  font-weight: 700;
  background: linear-gradient(90.21deg, pink -5.91%, lightgreen 111.58%);
  border-radius: 1em;
  padding: .5em;
}

.products h3 {
  font-size: 35px;
  font-weight: 700;
  padding-top: 50px;
  padding-bottom: 40px;
}

.products p {
  color: white;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}

.product-slider {
  width: 75%;
  margin: 0 auto;
  position: relative;
}

.product-slider .item img {
  width: 90%;
  margin: 0 auto 15px auto;
}

/************ Projects Css ************/
.project {
  padding: 80px 0;
  position: relative;
  background-color: white;
}

.project h1 {
  font-size: 90px;
  font-weight: 700;
  text-align: center;
  color: black;
  text-decoration: underline;
  text-decoration-color: #5CB0F0;
}

.project h2 {
  font-size: 45px;
  font-weight: 700;
  text-align: center;
}

.project h3 {
  font-size: 35px;
  font-weight: 700;
  text-align: center;
  margin-top: 30px;
  margin-bottom: 20px;
  color: black;
}

.project p {
  color: black;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px auto 30px auto;
  text-align: center;
  width: 56%;
}

/************ Map Css ************/

.map {
  position: relative;
  background-color: white;
  padding: 20px;
}

.map h1 {
  font-size: 90px;
  font-weight: 700;
  text-align: center;
  color: black;
  text-decoration: underline;
  text-decoration-color: black;
}

.map h2 {
  font-size: 45px;
  font-weight: 700;
  text-align: center;
  color: black;
  text-decoration: underline;
  text-decoration-color: #5CB0F0;
}

.map h3 {
  font-size: 35px;
  font-weight: 700;
  text-align: center;
  margin-top: 30px;
  margin-bottom: 20px;
  color: black;
}

.map p {
  color: black;
  font-size: 20px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px auto 30px auto;
  text-align: center;
  width: 56%;
}

.products {
  padding: 0 0 50px 0;
  position: relative;
  background: linear-gradient(#5CB0F0, #5CB0F0 150%) !important;
  text-align: center;
  padding: 80px 50px;
}

.products .springTitle {
  width: 70%;
  height: 70%;
}


.products-bx {
  background: #151515;
  text-align: center;
  padding: 80px 50px;
}

.products h1 {
  font-size: 150px;
  font-weight: 700;
  margin-top: 30px;
}

.products h2 {
  font-size: 60px;
  font-weight: 700;
  background: linear-gradient(90.21deg, pink -5.91%, lightgreen 111.58%);
  border-radius: 1em;
  padding: .5em;
}

.products h3 {
  font-size: 35px;
  font-weight: 700;
  padding-top: 50px;
  padding-bottom: 40px;
}

.products p {
  color: white;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}

.product-slider {
  width: 75%;
  margin: 0 auto;
  position: relative;
}

.product-slider .item img {
  width: 90%;
  margin: 0 auto 15px auto;
}

/************ Matters Css ************/

.matters {
  padding: 80px 0;
  position: relative;
  background-color: #5CB0F0;
}

.matters h1 {
  font-size: 90px;
  font-weight: 700;
  text-align: center;
  color: white;
  text-decoration: underline;
  text-decoration-color: black;
  margin-bottom: 50px;
}
/* ... */

